k8s/frontend/deployment.yaml
# k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: market-analysis-webapp
    type: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: market-analysis-webapp
      type: frontend
  template:
    metadata:
      labels:
        app: market-analysis-webapp
        type: frontend
    spec:
      containers:
      - name: frontend-container
        image: ghcr.io/yakibuta888/market_analysis_webapp/frontend:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
